src/test/deca/codegen/valid/renduInter02/33modulo_print_int.deca
// Description:
//      Opérateur binaire modulo (symbole "%")
//      => Cas spécifique avec utilisation du modulo lors de l'affichage (println) du reste réel d'une division entière
//
// Resultats:
//      y=7
//      z=-2
//      x=3

{
    int t = 1;
    int y;
    int z;
    println("y=", y = 7 % t);
    println("z=", z = 10 % -5);
    println("x=", y % (-z));
}