src/test/deca/codegen/invalid/renduInter02/01modulo_by_zero.deca
// Description:
//      Opérateur binaire % incorrecte au niveau des valeurs utilisées
//      => L'opérateur % ne peut pas donner le reste d'une division par 0
//
// Resultats:
//      Erreur à l'exécution
//      Ligne 10 : reste d'une division par zero

{
    int x = y % 0;
    println("x=", x);
}